[package]
authors = ["Fabian Möller <fabianm88@gmail.com>"]
description = "Prometheus exporter reporting ping statistics using ARP"
edition = "2021"
keywords = ["prometheus", "prometheus-exporter", "arp", "ping"]
license = "MIT OR Apache-2.0"
name = "arping-exporter"
readme = "README.md"
repository = "https://github.com/B4dM4n/arping-exporter"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
futures-util = { version = "0.3.30", default-features = false }
humantime = "2.1.0"
nix = { version = "0.29.0", features = ["socket"] }
password-auth = "1.0.0"
pnet = "0.35.0"
prometheus = { version = "0.13.4", default-features = false, features = ["process"] }
sd-notify = "0.4.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"
socket2 = "0.5.7"
tokio = { version = "1.38.1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
